--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap');
 .App {
   text-align: center;
-  /* color:#2898c4 */
+  /* color:#2898c5 4 hoga */
 }
 
 .App-logo {
